# vsix

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist.toml
.cargo/: config.toml
.github/scripts/: update_homebrew_formula.py
.github/workflows/: ci.yml  release.yml
homebrew-formula/: vsix.rb
src/: lib.rs  main.rs
src/application/: install_use_case.rs  mod.rs  services.rs  use_cases.rs
src/domain/: entities.rs  errors.rs  installation_strategy.rs  mod.rs  repositories.rs  sort.rs  value_objects.rs
src/infrastructure/: file_system.rs  installation_service.rs  marketplace_client.rs  marketplace_tests.rs  mod.rs
src/presentation/: cli.rs  display.rs  mod.rs
tests/: integration_test.rs
