[package]
name = "vsix-install"
version = "1.0.0"
edition = "2024"
authors = ["Christian Beelte <cb@beelte.com>"]
description = "A command-line utility that downloads and installs .vsix extensions into Visual Studio Code and Cursor"
license = "MIT"
repository = "https://github.com/beeltec/vsix-install"
keywords = ["vscode", "extensions", "vsix", "marketplace", "cli", "cursor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
comfy-table = "7.1"
indicatif = "0.17"
colored = "2.1"
dirs = "5.0"
zip = "2.2"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
