[package]
name = "vsix"
version = "1.0.1"
edition = "2024"
authors = ["Christian Beelte <cb@beelte.com>"]
description = "A command-line utility that downloads and installs .vsix extensions into Visual Studio Code and Cursor"
license = "MIT"
repository = "https://github.com/beeltec/vsix"
keywords = ["vscode", "extensions", "vsix", "marketplace", "cursor"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/vsix"
readme = "README.md"
homepage = "https://github.com/beeltec/vsix"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "vsix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
comfy-table = "7.1"
indicatif = "0.18"
colored = "3.0"
dirs = "6.0"
zip = "4.3"
flate2 = "1.0"
which = "7.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
